<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bhanuteja.android.com.popularmovies.ui.Activities.MovieDetailsActivity">

    <ProgressBar
        android:id="@+id/progess_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:foregroundGravity="center_vertical" />

    <FrameLayout
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardElevation="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/movie_name"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </FrameLayout>

            </android.support.v7.widget.CardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/no_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/nodetailsfound"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/movie_details_poster"
                            android:layout_width="wrap_content"
                            android:layout_height="350dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY" />

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/stext"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/synposis"
                                    android:textAllCaps="true"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="5dp"
                                    android:background="#90909090" />

                                <TextView
                                    android:id="@+id/movie_synopsis"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:text="@string/synposiscontent"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:cardUseCompatPadding="true"
                            app:elevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginStart="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/userrating"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/movie_rating"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:gravity="center_horizontal"
                                        android:text="RATING"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />
                                </LinearLayout>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2px"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="5dp"
                                    android:background="#90909090" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginStart="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/releasedate"
                                        android:textAllCaps="true"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/movie_date"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:gravity="center_horizontal"
                                        android:text="@string/date"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />
                                </LinearLayout>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2px"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginLeft="50dp"
                                    android:layout_marginRight="50dp"
                                    android:layout_marginTop="5dp"
                                    android:background="#90909090" />

                                <Button
                                    android:id="@+id/addToFavorites"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@color/colorPrimary"
                                    android:text="@string/add_to_fav"
                                    android:textAllCaps="true"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">

                            <ProgressBar
                                android:id="@+id/trailers_progressbar"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/trailers"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2px"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginLeft="50dp"
                                    android:layout_marginRight="50dp"
                                    android:layout_marginTop="5dp"
                                    android:background="#90909090" />

                                <TextView
                                    android:id="@+id/trailers_not_available_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:gravity="center_horizontal"
                                    android:text="@string/notavailable"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:visibility="gone" />

                                <android.support.v7.widget.RecyclerView
                                    android:id="@+id/trailers_recyclerview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"></android.support.v7.widget.RecyclerView>
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">

                            <ProgressBar
                                android:id="@+id/reviews_progressbar"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/reviews"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2px"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginLeft="50dp"
                                    android:layout_marginRight="50dp"
                                    android:layout_marginTop="5dp"
                                    android:background="#90909090" />

                                <TextView
                                    android:id="@+id/reviews_not_available_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:gravity="center_horizontal"
                                    android:text="@string/notavailable"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:visibility="gone" />

                                <android.support.v7.widget.RecyclerView
                                    android:id="@+id/reviews_recyclerview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"></android.support.v7.widget.RecyclerView>
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>
                </FrameLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>